--- a/form.html
+++ b/form.html
@@ -4,7 +4,12 @@
 <body>
   <h1>データ入力窓口</h1>
   <form action="http://localhost:3000/api/item/create" method="POST">
-    <input type="text" name="title">
+    title:<input type="text" name="title">
+    image:<input type="text" name="image">
+    price:<input type="text" name="price">
+    description:<input type="text" name="description">
+    email:<input type="text" name="email">
+
     <button type="submit">投稿</button>
   </form>
 </body>
